--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ nvidia-cublas-cu11==11.10.3.66
 nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
+tokenizers==0.13.2
 torch==1.13.1
 typing_extensions==4.4.0
